# ryxu-xo-autoplay-py

./: LICENSE  MANIFEST.in  README.md  __init__.py  autoplay.py  events.py  pyproject.toml  requirements.txt  setup.py  types.py
examples/: __init__.py  basic_usage.py  lavalink_integration.py  wavelink_integration.py
providers/: __init__.py  base.py  soundcloud.py  spotify.py  youtube.py
tests/: __init__.py  test_autoplay.py  test_events.py  test_providers.py
utils/: __init__.py  autoplay_apis.py  http.py
