[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ryxu-xo-autoplay"
version = "1.0.0"
description = "A high-performance autoplay API for Lavalink clients with source-to-source continuity"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ryxu-xo", email = "ryxu-xo@example.com"}
]
keywords = ["lavalink", "autoplay", "music", "discord", "bot", "youtube", "spotify", "soundcloud"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
wavelink = [
    "wavelink>=2.0.0",
    "discord.py>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/ryxu-xo/ryxu-xo-autoplay"
Repository = "https://github.com/ryxu-xo/ryxu-xo-autoplay"
Issues = "https://github.com/ryxu-xo/ryxu-xo-autoplay/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["autoplay*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
